cabal-version: 1.12

name:           killcx-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/boeyms/killcx-hs#readme>
homepage:       https://github.com/boeyms/killcx-hs#readme
bug-reports:    https://github.com/boeyms/killcx-hs/issues
author:         Maun Suang Boey
maintainer:     at-code@boeyms.info
copyright:      2020 Maun Suang Boey
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/boeyms/killcx-hs

library
  exposed-modules:
      Lib
  other-modules:
      Paths_killcx_hs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , base16-bytestring
    , bytestring
    , pcap
  default-language: Haskell2010

executable killcx-hs
  main-is: Main.hs
  other-modules:
      Paths_killcx_hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , killcx-hs
  default-language: Haskell2010

test-suite killcx-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_killcx_hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , killcx-hs
  default-language: Haskell2010
